fix wrapping

--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,9 @@ palette: https://palettes.shecodes.io/palettes/1313
 
     .game-buttons-container {
       display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      max-width: 100%;
 
       .game-button {
         min-height: 104px;
